# Ko-AgentBench

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_en.md  analyze_tool_call_results.py  combine_evaluations.py  evaluate_levels.py  evaluate_model_run.py  example_local_inference.py  main.py  nohup.out  pyproject.toml  requirements.txt  run_benchmark_with_logging.py  run_multi_model_experiment.sh  setup.py  test_levels.py  test_local_inference.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-task---tool-request.md  question---help.md
bench/: __init__.py  config.py  observability.py
bench/adapters/: __init__.py  base_adapter.py  litellm_adapter.py  openrouter_adapter.py  transformers_adapter.py  vllm_adapter.py
bench/cache/: cache_store.py
bench/logging/: __init__.py  langfuse_logger.py
bench/models/: __init__.py  model_registry.py
bench/runner/: __init__.py  judge.py  metrics.py  prompts.yaml  run.py  test_run.py
bench/tasks/: L1.json  L1_backup.json  L2.json  L2_backup.json  L3.json  L4.json  L5.json  L6.json  L7.json  __init__.py  sample_naver_tasks.jsonl  task_loader.py  (+2 more)
configs/: __init__.py  secrets.py
data/: L1.json  L2.json  L3.json  L4.json  L5.json  L6.json  L7.json
docs/: evaluation.md
logs/: benchmark_huggingface_Qwen_Qwen2.5-7B-Instruct_20250930_193857.json  benchmark_huggingface_Qwen_Qwen3-4B-Instruct-2507_20251009_022504.json  benchmark_huggingface_zai-org_GLM-4.5_20250930_232322.json  tool_call_analysis.json  tool_call_analysis_report.txt
reports/: combined_evaluation_summary.csv
scripts/: seed_cache.py
(+678 files in other folders)
