[project]
name = "ko-agentbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.55",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "litellm>=1.77.0",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "transformers>=4.56.1",
]
